src/test/ui/associated-types/higher-ranked-projection.bad.stderr
error[E0271]: type mismatch resolving `for<'a> <&'a _ as Mirror>::Image == _`
  --> $DIR/higher-ranked-projection.rs:25:5
   |
LL | fn foo<U, T>(_t: T)
   |    ---
LL |     where for<'a> &'a T: Mirror<Image=U>
   |                                 ------- required by this bound in `foo`
...
LL |     foo(());
   |     ^^^ expected bound lifetime parameter 'a, found concrete lifetime

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
